--- a/Portfolio2/backend/data/projects.json
+++ b/Portfolio2/backend/data/projects.json
@@ -1,16 +1,1 @@
-[
-    {
-        "title": "Portfolio",
-        "description": "Lage portolio nettside",
-        "startDate": "2024-09-05",
-        "endDate": "2024-09-05",
-        "status": "Fullført"
-    },
-    {
-        "title": "Noe",
-        "description": "Lage portolio nettside",
-        "startDate": "2024-09-05",
-        "endDate": "2024-09-08",
-        "status": "Pågående"
-    }
-]
+[{"id":"3","title":"Portfolio","description":"Lage portolio nettside","startDate":"2024-09-05","endDate":"2024-09-05","status":"Fullført"},{"id":"4","title":"Noe","description":"Lage portolio nettside","startDate":"2024-09-05","endDate":"2024-09-08","status":"Pågående"}]
