--- a/Portfolio3/backend/Data/projects.json
+++ b/Portfolio3/backend/Data/projects.json
@@ -1,1 +1,1 @@
-[{"id":"3","title":"Portfolio","description":"Lage portolio nettside","startDate":"2024-09-05","endDate":"2024-09-05","status":"Fullført"},{"id":"4","title":"Noe","description":"Lage portolio nettside","startDate":"2024-09-05","endDate":"2024-09-08","status":"Pågående"},{"id":"ad721f7b-17a6-4449-a606-aa15b379dd36","title":"gnr","description":"ejrnk","startDate":"2024-10-16","endDate":"2024-10-18","status":"Pågående"}]
+[{"id":"de1c2be7-1600-47f4-be88-184b16bb6ded","title":"ekfnl","description":"klnglk","startDate":"2024-10-17","endDate":"2024-10-17","status":"Fullført"}]
