--- a/Portfolio3/backend/package.json
+++ b/Portfolio3/backend/package.json
@@ -5,9 +5,12 @@
   },
   "dependencies": {
     "@hono/node-server": "^1.13.1",
-    "hono": "^4.6.2"
+    "better-sqlite3": "^11.5.0",
+    "hono": "^4.6.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.11",
     "@types/node": "^20.11.17",
     "tsx": "^4.7.1"
   }
